--- a/Ecommerce/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
+++ b/Ecommerce/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
@@ -16,7 +16,7 @@
             <!-- Add icons to the links using the .nav-icon class
     with font-awesome or any other icon font library -->
             <li class="nav-item">
-                <a href="/admin/Category" class="nav-link">
+                <a href="/admin/category" class="nav-link">
                     <i class="nav-icon fas fa-tachometer-alt"></i>
                     <p>
                         Danh mục
