--- a/Ecommerce/Areas/Admin/Views/News/Add.cshtml
+++ b/Ecommerce/Areas/Admin/Views/News/Add.cshtml
@@ -80,6 +80,11 @@
                         </div>
 
                         <div class="form-group">
+                            <label for="exampleInputPassword1">Hiển thị</label>
+                            @Html.CheckBoxFor(x => x.IsActive, new { @checked = "@checked" })
+                        </div>
+
+                        <div class="form-group">
                             <label for="exampleInputPassword1">Seo title</label>
                             @Html.TextAreaFor(x => x.SeoTitle, new { @class = "form-control" })
                         </div>
