--- a/Ecommerce/Areas/Admin/Views/News/Index.cshtml
+++ b/Ecommerce/Areas/Admin/Views/News/Index.cshtml
@@ -52,6 +52,9 @@
             <table class="table table-hover">
                 <thead>
                     <tr>
+                        <th>
+                            <input type="checkbox" id="SelectAll" />
+                        </th>
                         <th>STT</th>
                         <th>Hình ảnh</th>
                         <th>Tiêu đề</th>
@@ -68,6 +71,9 @@
                         {
                             var strCheck = item.IsActive ? "<i class='fa fa-check text-success'></i>" : "<i class='fas fa-times text-danger'></i>";
                             <tr id="trow_@item.Id">
+                                <td>
+                                    <input type="checkbox" class="cbkItem" value="@item.Id" />
+                                </td>
                                 <td>@i</td>
                                 <td>
                                     <img src="@item.Image" style="width:50px;" />
@@ -108,6 +114,54 @@
 @section scripts{
     <script>
         $(document).ready(function () {
+            $('body').on('click', '#BtnDeleteAll', function (e) {
+                e.preventDefault();
+                var str = ''
+                var checkbox = $(this).parents('.card').find('tr td input:checkbox')
+                var i = 0
+                checkbox.each(function () {
+                    if (this.checked) {
+                        var _id = $(this).val()
+                        if (i === 0) {
+                            str += _id
+                        } else {
+                            str += ',' + _id
+                        }
+                        i++
+                    } else {
+                        checkbox.attr('selected', '')
+                    }
+                })
+                if (str.length > 0) {
+                    var cf = confirm('Bạn có muốn xóa các bản ghi này hay không?')
+                    if (cf) {
+                        $.ajax({
+                            url: '/admin/news/deleteAll',
+                            type: 'POST',
+                            data: { id: str },
+                            success: function (rs) {
+                                if (rs.success) {
+                                    location.reload()
+                                }
+                            }
+                        })
+                    }
+                }
+            })
+
+            $('body').on('change', '#SelectAll', function () {
+                var checkStatus = this.checked
+                var checkbox = $(this).parents('.card-body').find('tr td input:checkbox')
+                checkbox.each(function () {
+                    this.checked = checkStatus
+                    if (this.checked) {
+                        checkbox.attr('selected', 'checked')
+                    } else {
+                        checkbox.attr('selected', '')
+                    }
+                })
+            })
+
             $('body').on('click', '.btnDelete', function () {
                 var id = $(this).data('id')
                 var cf = confirm('Bạn có muốn xóa bản ghi này không?')
