--- a/Ecommerce/Areas/Admin/Views/Post/Index.cshtml
+++ b/Ecommerce/Areas/Admin/Views/Post/Index.cshtml
@@ -1,8 +1,6 @@
-﻿@model PagedList.PagedList<Ecommerce.Models.EF.News>
-@using PagedList.Mvc;
-@using PagedList;
+﻿@model IEnumerable<Ecommerce.Models.EF.Posts>
 @{
-    ViewBag.Title = "Danh sách tin tức";
+    ViewBag.Title = "Bài viết";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
@@ -13,7 +11,7 @@
             <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-            <a href="/admin/home" class="nav-link">Trang chủ</a>
+            <a href="/admin" class="nav-link">Trang chủ</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
             <a href="/admin/category" class="nav-link">@ViewBag.Title</a>
@@ -25,7 +23,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1>Quản lý tin tức</h1>
+                <h1>Quản lý bài viết</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -39,105 +37,75 @@
 
 <!-- Main content -->
 <section class="content">
-
     <!-- Default box -->
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title">@ViewBag.Title</h3>
-
+            <h3 class="card-title">Danh sách bài viết</h3>
             <div class="card-tools">
-                <a href="/admin/news/add" class="btn btn-primary">Thêm mới</a>
-                <a href="#" class="btn btn-danger" id="BtnDeleteAll">Xóa nhiều</a>
+                <a href="/admin/post/add" class="btn btn-primary">Thêm mới</a>
+                <a href="#" class="btn btn-danger" id="BtnDeleteAll">Xóa</a>
             </div>
         </div>
-        <div class="card-body"
-        <div class="row">
-        <div class="col-6">
-        @using (Html.BeginForm("Index", "News", FormMethod.Get, new { }))
-        {
-            <div class="input-group input-group-sm">
-            @Html.TextBox("Searchtext", null, new { @class = "form-control" })
-            <span class="input-group-append">
-            <button type="submit" class="btn btn-info btn-flat">Tìm kiếm</button>
-            </span>
-            </div>
-        }
+        <div class="card-body">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>
+                            <input type="checkbox" id="SelectAll" />
+                        </th>
+                        <th>STT</th>
+                        <th>Hình ảnh</th>
+                        <th>Tiêu đề</th>
+                        <th>Ngày tạo</th>
+                        <th>Hiển thị</th>
+                        <th>Thao tác</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @if (Model != null && Model.Any())
+                    {
+                        var i = 1;
+                        foreach (var item in Model)
+                        {
+                            var strCheck = item.IsActive ? "<i class='fa fa-check text-success'></i>" : "<i class='fas fa-times text-danger'></i>";
+                            <tr id="trow_@item.Id">
+                                <td>
+                                    <input type="checkbox" class="cbkItem" value="@item.Id" />
+                                </td>
+                                <td>@i</td>
+                                <td>
+                                    <img src="@item.Image" style="width:50px;" />
+                                </td>
+                                <td>@item.Title</td>
+                                <td>@item.CreatedDate.ToString("dd/MM/yyyy")</td>
+                                <td class="text-center">
+                                    <a href='#' data-id="@item.Id" class="btnActive">@Html.Raw(strCheck)</a>
+                                </td>
+                                <td>
+                                    <a href="/admin/post/edit/@item.Id" class="btn btn-sm btn-primary">Sửa</a>
+                                    <a href="#" data-id="@item.Id" class="btn btn-sm btn-danger btnDelete">Xóa</a>
+                                </td>
+                            </tr>
+                            i++;
+                        }
+                    }
+                    else
+                    {
+                        <tr>
+                            <td colspan="8">Không có bản ghi nào!!!</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
         </div>
-        </div>
-        <table class="table table-hover">
-        <thead>
-        <tr>
-        <th>
-        <input type="checkbox" id="SelectAll" />
-        </th>
-        <th>STT</th>
-        <th>Hình ảnh</th>
-        <th>Tiêu đề</th>
-        <th>Ngày tạo</th>
-        <th>Hiển thị</th>
-        <th style="width:150px;">Thao tác</th>
-        </tr>
-        </thead>
-        <tbody>
-        @if (Model != null && Model.Any())
-        {
-            var i = ((ViewBag.Page - 1) * ViewBag.PageSize) + 1;
-            foreach (var item in Model)
-            {
-                var strCheck = item.IsActive ? "<i class='fa fa-check text-success'></i>" : "<i class='fas fa-times text-danger'></i>";
-                <tr id="trow_@item.Id">
-                <td>
-                <input type="checkbox" class="cbkItem" value="@item.Id" />
-                </td>
-                <td>@i</td>
-                <td>
-                <img src="@item.Image" style="width:50px;" />
-                </td>
-                <td>@item.Title</td>
-                <td>@item.CreatedDate.ToString("dd/MM/yyyy")</td>
-                <td class="pl-4">
-                <a href="#" data-id="@item.Id" class="btnActive">@Html.Raw(strCheck)</a>
-                </td>
-                <td>
-                <a href="/admin/news/edit/@item.Id" class="btn btn-primary btn-sm">Sửa</a>
-                <a href="#" data-id="@item.Id" class="btn btn-danger btn-sm btnDelete">Xóa</a>
-                </td>
-                </tr>
-                i++;
-            }
-        }
-        else
-        {
-            <tr class="text-center">
-            <td colspan="6">Không có bản ghi nào!!!</td>
-            </tr>
-        }
-        </tbody>
-        </table>
-
-        <div class="row">
-        <div class="col-6"></div>
-        <div class="col-6 text-right">
-        @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
-        </div>
-        </div>
-        </div>
-        <!-- /.card-body -->
-        <div class="card-footer">
-            Footer
-        </div>
-        <!-- /.card-footer-->
     </div>
-    <!-- /.card -->
-
 </section>
-<!-- /.content -->
 
 @section scripts{
     <script>
         $(document).ready(function () {
             $('body').on('click', '#BtnDeleteAll', function (e) {
-                e.preventDefault();
+                e.preventDefault()
                 var str = ''
                 var checkbox = $(this).parents('.card').find('tr td input:checkbox')
                 var i = 0
@@ -158,7 +126,7 @@
                     var cf = confirm('Bạn có muốn xóa các bản ghi này hay không?')
                     if (cf) {
                         $.ajax({
-                            url: '/admin/news/deleteAll',
+                            url: '/admin/post/deleteAll',
                             type: 'POST',
                             data: { id: str },
                             success: function (rs) {
@@ -175,26 +143,26 @@
                 var checkStatus = this.checked
                 var checkbox = $(this).parents('.card-body').find('tr td input:checkbox')
                 checkbox.each(function () {
-                    this.checked = checkStatus
+                    this.checked = checkStatus;
                     if (this.checked) {
-                        checkbox.attr('selected', 'checked')
+                        checkbox.attr('selected', 'checked');
                     } else {
-                        checkbox.attr('selected', '')
+                        checkbox.attr('selected', '');
                     }
                 })
             })
 
             $('body').on('click', '.btnDelete', function () {
-                var id = $(this).data('id')
+                var id = $(this).data("id")
                 var cf = confirm('Bạn có muốn xóa bản ghi này không?')
                 if (cf) {
                     $.ajax({
-                        url: '/admin/news/delete',
+                        url: '/admin/post/delete',
                         type: 'POST',
-                        data: { id },
+                        data: { id: id },
                         success: function (rs) {
                             if (rs.success) {
-                                $('#trow_' + id).remove()
+                                $('#trow_' + id).remove();
                             }
                         }
                     })
@@ -206,12 +174,12 @@
                 var btn = $(this)
                 var id = btn.data('id')
                 $.ajax({
-                    url: '/admin/news/IsActive',
+                    url: '/admin/post/IsActive',
                     type: 'POST',
                     data: { id },
                     success: function (rs) {
                         if (rs.success) {
-                            if (rs.isAcive) {
+                            if (rs.isActive) {
                                 btn.html("<i class='fa fa-check text-success'></i>")
                             } else {
                                 btn.html("<i class='fas fa-times text-danger'></i>")
