--- a/Ecommerce/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
+++ b/Ecommerce/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
@@ -32,7 +32,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/admin/posts" class="nav-link">
+                <a href="/admin/post" class="nav-link">
                     <i class="nav-icon fas fa-th"></i>
                     <p>
                         Bài viết
